--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 body, html {
     margin: 0px;
+    font-family: 'Montserrat', sans-serif;
 
+
+    background-image: linear-gradient( 102.4deg,  rgba(253,189,85,1) 7.8%, rgba(249,131,255,1) 100.3% );
 }
 
 .appContainer {
